--- a/AcroCities/en.lproj/S3IntroViewController.xib
+++ b/AcroCities/en.lproj/S3IntroViewController.xib
@@ -47,8 +47,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{86, 46}, {194, 21}}</string>
 								<reference key="NSSuperview" ref="47925673"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="687654587"/>
+								<reference key="NSNextKeyView" ref="776667002"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -79,7 +78,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{41, 38}, {37, 37}}</string>
 								<reference key="NSSuperview" ref="47925673"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="73813066"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -91,7 +89,6 @@
 						</array>
 						<string key="NSFrame">{{0, 218}, {320, 113}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="779976420"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -113,7 +110,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 116}, {280, 30}}</string>
 								<reference key="NSSuperview" ref="479019510"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="561959537"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -151,7 +147,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 87}, {272, 21}}</string>
 								<reference key="NSSuperview" ref="479019510"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="515078402"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -172,7 +167,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 49}, {280, 30}}</string>
 								<reference key="NSSuperview" ref="479019510"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="835754007"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -202,7 +196,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 20}, {110, 21}}</string>
 								<reference key="NSSuperview" ref="479019510"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="344124180"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -223,7 +216,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 256}, {280, 44}}</string>
 								<reference key="NSSuperview" ref="479019510"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="47925673"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -259,7 +251,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 181}, {280, 44}}</string>
 								<reference key="NSSuperview" ref="479019510"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="42289968"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -280,7 +271,6 @@
 						</array>
 						<string key="NSFrame">{{0, 56}, {320, 319}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="779297888"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -296,8 +286,6 @@
 						<int key="NSvFlags">265</int>
 						<string key="NSFrame">{{92, 499}, {220, 47}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -321,17 +309,16 @@
 						</object>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
-					<object class="IBUIView" id="687654587">
+					<object class="IBUIView" id="776667002">
 						<reference key="NSNextResponder" ref="774585933"/>
 						<int key="NSvFlags">292</int>
 						<array class="NSMutableArray" key="NSSubviews">
-							<object class="IBUILabel" id="49645841">
-								<reference key="NSNextResponder" ref="687654587"/>
+							<object class="IBUILabel" id="503634187">
+								<reference key="NSNextResponder" ref="776667002"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 20}, {280, 21}}</string>
-								<reference key="NSSuperview" ref="687654587"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="182987640"/>
+								<reference key="NSSuperview" ref="776667002"/>
+								<reference key="NSNextKeyView" ref="406097253"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -346,13 +333,12 @@
 								<reference key="IBUIFont" ref="779245148"/>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
-							<object class="IBUIButton" id="182987640">
-								<reference key="NSNextResponder" ref="687654587"/>
+							<object class="IBUIButton" id="406097253">
+								<reference key="NSNextResponder" ref="776667002"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 49}, {172, 44}}</string>
-								<reference key="NSSuperview" ref="687654587"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="62935685"/>
+								<reference key="NSSuperview" ref="776667002"/>
+								<reference key="NSNextKeyView" ref="100733208"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -369,13 +355,12 @@
 								<reference key="IBUIFontDescription" ref="582132084"/>
 								<reference key="IBUIFont" ref="17294650"/>
 							</object>
-							<object class="IBUIButton" id="62935685">
-								<reference key="NSNextResponder" ref="687654587"/>
+							<object class="IBUIButton" id="100733208">
+								<reference key="NSNextResponder" ref="776667002"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{200, 50}, {100, 44}}</string>
-								<reference key="NSSuperview" ref="687654587"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="470564379"/>
+								<reference key="NSSuperview" ref="776667002"/>
+								<reference key="NSNextKeyView" ref="328859185"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -392,12 +377,11 @@
 								<reference key="IBUIFontDescription" ref="582132084"/>
 								<reference key="IBUIFont" ref="17294650"/>
 							</object>
-							<object class="IBUIButton" id="470564379">
-								<reference key="NSNextResponder" ref="687654587"/>
+							<object class="IBUIButton" id="328859185">
+								<reference key="NSNextResponder" ref="776667002"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{119, 114}, {82, 44}}</string>
-								<reference key="NSSuperview" ref="687654587"/>
-								<reference key="NSWindow"/>
+								<reference key="NSSuperview" ref="776667002"/>
 								<reference key="NSNextKeyView" ref="490397077"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -418,8 +402,7 @@
 						</array>
 						<string key="NSFrame">{{0, 218}, {320, 157}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="49645841"/>
+						<reference key="NSNextKeyView" ref="503634187"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -432,7 +415,6 @@
 				</array>
 				<string key="NSFrame">{{0, 20}, {320, 548}}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="479019510"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -507,7 +489,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">loggedInLabel</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="49645841"/>
+						<reference key="destination" ref="503634187"/>
 					</object>
 					<int key="connectionID">288</int>
 				</object>
@@ -515,7 +497,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">loggedInView</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="687654587"/>
+						<reference key="destination" ref="776667002"/>
 					</object>
 					<int key="connectionID">284</int>
 				</object>
@@ -523,7 +505,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">findGameButton</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="182987640"/>
+						<reference key="destination" ref="406097253"/>
 					</object>
 					<int key="connectionID">321</int>
 				</object>
@@ -531,7 +513,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">myGamesButton</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="62935685"/>
+						<reference key="destination" ref="100733208"/>
 					</object>
 					<int key="connectionID">325</int>
 				</object>
@@ -580,7 +562,7 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">findGames:</string>
-						<reference key="source" ref="182987640"/>
+						<reference key="source" ref="406097253"/>
 						<reference key="destination" ref="372490531"/>
 						<int key="IBEventType">7</int>
 					</object>
@@ -589,7 +571,7 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">showMyGames:</string>
-						<reference key="source" ref="62935685"/>
+						<reference key="source" ref="100733208"/>
 						<reference key="destination" ref="372490531"/>
 						<int key="IBEventType">7</int>
 					</object>
@@ -598,7 +580,7 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">showMyGames:</string>
-						<reference key="source" ref="470564379"/>
+						<reference key="source" ref="328859185"/>
 						<reference key="destination" ref="372490531"/>
 						<int key="IBEventType">7</int>
 					</object>
@@ -607,7 +589,7 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">logOut:</string>
-						<reference key="source" ref="470564379"/>
+						<reference key="source" ref="328859185"/>
 						<reference key="destination" ref="372490531"/>
 						<int key="IBEventType">7</int>
 					</object>
@@ -638,7 +620,7 @@
 						<reference key="object" ref="774585933"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="490397077"/>
-							<reference ref="687654587"/>
+							<reference ref="776667002"/>
 							<reference ref="47925673"/>
 							<reference ref="479019510"/>
 						</array>
@@ -696,30 +678,30 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">270</int>
-						<reference key="object" ref="687654587"/>
+						<reference key="object" ref="776667002"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="182987640"/>
-							<reference ref="62935685"/>
-							<reference ref="49645841"/>
-							<reference ref="470564379"/>
+							<reference ref="100733208"/>
+							<reference ref="503634187"/>
+							<reference ref="328859185"/>
+							<reference ref="406097253"/>
 						</array>
 						<reference key="parent" ref="774585933"/>
 						<string key="objectName">LoadingView</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">289</int>
-						<reference key="object" ref="182987640"/>
-						<reference key="parent" ref="687654587"/>
+						<reference key="object" ref="406097253"/>
+						<reference key="parent" ref="776667002"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">309</int>
-						<reference key="object" ref="62935685"/>
-						<reference key="parent" ref="687654587"/>
+						<reference key="object" ref="100733208"/>
+						<reference key="parent" ref="776667002"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">272</int>
-						<reference key="object" ref="49645841"/>
-						<reference key="parent" ref="687654587"/>
+						<reference key="object" ref="503634187"/>
+						<reference key="parent" ref="776667002"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">97</int>
@@ -743,8 +725,8 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">337</int>
-						<reference key="object" ref="470564379"/>
-						<reference key="parent" ref="687654587"/>
+						<reference key="object" ref="328859185"/>
+						<reference key="parent" ref="776667002"/>
 					</object>
 				</array>
 			</object>
@@ -777,96 +759,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">339</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">S3IntroViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="findGames:">id</string>
-						<string key="logOut:">id</string>
-						<string key="loginUser:">id</string>
-						<string key="registerUser:">id</string>
-						<string key="showMyGames:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="findGames:">
-							<string key="name">findGames:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="logOut:">
-							<string key="name">logOut:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="loginUser:">
-							<string key="name">loginUser:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="registerUser:">
-							<string key="name">registerUser:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="showMyGames:">
-							<string key="name">showMyGames:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="findGameButton">UIButton</string>
-						<string key="loadingSpinner">UIView</string>
-						<string key="loggedInLabel">UILabel</string>
-						<string key="loggedInView">UIView</string>
-						<string key="myGamesButton">UIButton</string>
-						<string key="passwordField">UITextField</string>
-						<string key="registrationView">UIView</string>
-						<string key="titleLabel">UILabel</string>
-						<string key="usernameField">UITextField</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="findGameButton">
-							<string key="name">findGameButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="loadingSpinner">
-							<string key="name">loadingSpinner</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="loggedInLabel">
-							<string key="name">loggedInLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="loggedInView">
-							<string key="name">loggedInView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="myGamesButton">
-							<string key="name">myGamesButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="passwordField">
-							<string key="name">passwordField</string>
-							<string key="candidateClassName">UITextField</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="registrationView">
-							<string key="name">registrationView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="titleLabel">
-							<string key="name">titleLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="usernameField">
-							<string key="name">usernameField</string>
-							<string key="candidateClassName">UITextField</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/S3IntroViewController.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
